Reduce size of centerbox to prevent scrollbars in IE

--- a/angelikabartels/web/stylesheets/styles.css
+++ b/angelikabartels/web/stylesheets/styles.css
@@ -46,8 +46,8 @@ a {
 }
 
 .centerbox {
-	top: 0px;
-	left: 0px;
+	top: 5px;
+	left: 5px;
 	margin: 0px;
 	padding: 0px;
 }
